fix: overflow issue fixed

--- a/client/src/Components/ChatPage/ChatPage.module.sass
+++ b/client/src/Components/ChatPage/ChatPage.module.sass
@@ -166,6 +166,7 @@ $input-margin: 0.2rem
 
   .ChatPage
     min-height: $min-height
+    overflow-y: auto
 
   .Chat
     width: 40vw
