--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -19,4 +19,8 @@ body,html,#root
   width: 100vw
   height: 100vh
   min-height: $min-height
-  overflow: auto
+  overflow-y: auto
+  overflow-x: hidden
+
+#root
+  position: relative
